base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: pacman
spec:
  selector:
    app: pacman
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
