base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman-route
  namespace: pacman
  labels: {}
spec:
  to:
    kind: Service
    name: pacman-service
  tls: null
  port:
    targetPort: 8080
